# auchan-metro-parsers

./: README.md  pyproject.toml  requirements.txt
auchan/: main.py  moscow.csv  saint_petersburg.csv  settings.py
auchan/parser/: app.py  exceptions.py  getters.py  utils.py
auchan/parser/handlers/: id_handlers.py  products_handlers.py
metro_parser/: main.py  moscow.csv  saint_petersburg.csv  settings.py
metro_parser/parser/: __init__.py  getter.py  handler.py  writer.py
